// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datatable_expression DatatableComponent it renders actions column when there are row actions 1`] = `
<VisualizationContainer
  reportTitle="My fanci metric chart"
>
  <EuiBasicTable
    className="lnsDataTable"
    columns={
      Array [
        Object {
          "field": "a",
          "name": "a",
          "render": [Function],
          "sortable": true,
        },
        Object {
          "field": "b",
          "name": "b",
          "render": [Function],
          "sortable": true,
        },
        Object {
          "field": "c",
          "name": "c",
          "render": [Function],
          "sortable": true,
        },
        Object {
          "actions": Array [
            Object {
              "description": "Table row context menu",
              "icon": [Function],
              "name": "More",
              "onClick": [Function],
              "type": "icon",
            },
          ],
          "name": "Actions",
        },
      ]
    }
    data-test-subj="lnsDataTable"
    items={
      Array [
        Object {
          "a": "shoes",
          "b": 1588024800000,
          "c": 3,
          "rowIndex": 0,
        },
      ]
    }
    noItemsMessage="No items found"
    onChange={[Function]}
    responsive={true}
    sorting={
      Object {
        "allowNeutralSort": true,
        "sort": undefined,
      }
    }
    tableLayout="auto"
  />
</VisualizationContainer>
`;

exports[`datatable_expression DatatableComponent it renders the title and value 1`] = `
<VisualizationContainer
  reportTitle="My fanci metric chart"
>
  <EuiBasicTable
    className="lnsDataTable"
    columns={
      Array [
        Object {
          "field": "a",
          "name": "a",
          "render": [Function],
          "sortable": true,
        },
        Object {
          "field": "b",
          "name": "b",
          "render": [Function],
          "sortable": true,
        },
        Object {
          "field": "c",
          "name": "c",
          "render": [Function],
          "sortable": true,
        },
      ]
    }
    data-test-subj="lnsDataTable"
    items={
      Array [
        Object {
          "a": "shoes",
          "b": 1588024800000,
          "c": 3,
          "rowIndex": 0,
        },
      ]
    }
    noItemsMessage="No items found"
    onChange={[Function]}
    responsive={true}
    sorting={
      Object {
        "allowNeutralSort": true,
        "sort": undefined,
      }
    }
    tableLayout="auto"
  />
</VisualizationContainer>
`;
